--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.18.0",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
-    "openai": "^4.28.0"
+    "ffmpeg-static": "^5.2.0",
+    "node-fetch": "^3.3.2",
+    "ytdl-core-discord": "^1.3.1"
   },
   "repository": "https://github.com/pedpontes/bot-bodinho.git",
   "devDependencies": {
