--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^16.4.7",
     "ffmpeg-static": "^5.2.0",
     "node-fetch": "^3.3.2",
+    "openai": "^4.78.1",
     "ytdl-core-discord": "^1.3.1"
   },
   "repository": "https://github.com/pedpontes/bot-bodinho.git",
