feat: search by title music

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^3.3.2",
     "openai": "^4.78.1",
     "prisma": "^6.2.1",
+    "puppeteer": "^24.1.0",
     "ytdl-core": "^4.11.5"
   },
   "repository": "https://github.com/pedpontes/bot-bodinho.git",
