--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ TOKEN=
 
 ## OpenAI
 OPENAI_API_KEY=
+
+## Database
+DATABASE_URL="postgresql://bot:1234@localhost:5432/bot_db?schema=public" ## Verifique seu docker-compose.yml
