--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc",
-    "start": "node dist/index.js"
+    "start": "cross-env tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +16,7 @@
     "@prisma/client": "^6.2.1",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
+    "cross-env": "^7.0.3",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
     "ffmpeg-static": "^5.2.0",
