--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,11 +16,8 @@ jobs:
       - name: Deploy to Home Server
         uses: appleboy/ssh-action@v0.1.5
         with:
-          host: ${{ secrets.HOME_SERVER_HOST }} # IP ou nome do servidor
-          username: ${{ secrets.HOME_SERVER_USER }} # Nome de usuário
-          password: ${{ secrets.HOME_SERVER_PASSWORD }} # Senha do usuário
-          port: ${{ secrets.HOME_SERVER_PORT }} # Porta SSH, normalmente 22
           script: |
+          ssh -o StrictHostKeyChecking=no -p ${{ secrets.HOME_SERVER_PORT }} ${{ secrets.HOME_SERVER_USER }}@${{ secrets.HOME_SERVER_HOST }} << 'EOF'
             cd ~/bot-bodinho/
             git pull origin main
             yarnpkg
