--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon",
     "build": "tsc",
-    "start": "cross-env tsc && node dist/index.js"
+    "start": "cross-env NODE_ENV=production tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
