--- a/tsconfig.json
+++ b/tsconfig.json
@@ -105,7 +105,7 @@
 
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "baseUrl": "./src",
     "paths": {
       "@/*": ["*"]
