--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
-    "@prisma/client": "^6.2.1",
+    "@prisma/client": "^6.6.0",
+    "@types/express": "^5.0.1",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
     "cross-env": "^7.0.3",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "module-alias": "^2.2.3",
     "node-fetch": "^3.3.2",
