feat: update env.example for flowise service

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ OPENAI_API_KEY=
 
 ## Database
 DATABASE_URL="postgresql://bot:1234@localhost:5432/bot_db?schema=public" ## Verifique seu docker-compose.yml
+
+## Flowise service
+
+FLOWISE_BASE_URL=
+FLOWISE_API_KEY=
