--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.18.0",
     "@prisma/client": "^6.2.1",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "axios": "^1.6.7",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.7",
+    "express": "^5.1.0",
     "ffmpeg-static": "^5.2.0",
     "module-alias": "^2.2.3",
     "node-fetch": "^3.3.2",
